--- a/src/intermediacion.pug
+++ b/src/intermediacion.pug
@@ -9,7 +9,7 @@ html(lang="en")
       a(href="#") About
       a(href="#") Services
       a(href="#") Contact
-    a-scene(vr-mode-ui="enabled: false", cursor="rayOrigin: mouse", id="camera", position="0 1.6 0")
+    a-scene(vr-mode-ui="enabled: true", cursor="rayOrigin: mouse", id="camera", position="0 1.6 0")
       a-camera
         a-look-controls(pitchEnabled="false")
       a-videosphere(src="#video", rotation="0 270 0")
