--- a/src/head.pug
+++ b/src/head.pug
@@ -3,7 +3,7 @@ title Agencia Empleo
 link(rel="stylesheet", href="https://cdn.jsdelivr.net/npm/uikit@3.19.2/dist/css/uikit.min.css")
 script(src="https://aframe.io/releases/1.2.0/aframe.min.js")
 link(href="css/output.css", rel="stylesheet")
-link(rel="stylesheet", href="css/style.css")
+link(rel="stylesheet", href="css/styles.css")
 link(href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Notable&display=swap", rel="stylesheet")
 link(href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap", rel="stylesheet")
 link(href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poiret+One&display=swap", rel="stylesheet")
