--- a/src/head.pug
+++ b/src/head.pug
@@ -2,6 +2,7 @@ meta(charset="utf-8")
 title Agencia Empleo
 link(rel="stylesheet", href="https://cdn.jsdelivr.net/npm/uikit@3.19.2/dist/css/uikit.min.css")
 script(src="https://aframe.io/releases/1.2.0/aframe.min.js")
+<script src=https://servpub.madrid.es/FWIAM_FTP/assets/js/cookie-manager.js></script>
 link(href="css/output.css", rel="stylesheet")
 link(rel="stylesheet", href="css/styles.css")
 link(href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Notable&display=swap", rel="stylesheet")
@@ -10,3 +11,4 @@ link(href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..
 link(rel="preconnect", href="https://fonts.googleapis.com")
 link(rel="preconnect", href="https://fonts.gstatic.com", crossorigin)
 link(href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap", rel="stylesheet")
+<script src=https://ajax.googleapis.com/ajax/libs/prototype/1.7.3.0/prototype.js></script>
