--- a/src/head.pug
+++ b/src/head.pug
@@ -1,14 +1,16 @@
-meta(charset="utf-8")
-title Agencia Empleo
-link(rel="stylesheet", href="https://cdn.jsdelivr.net/npm/uikit@3.19.2/dist/css/uikit.min.css")
-script(src="https://aframe.io/releases/1.2.0/aframe.min.js")
-<script src=https://servpub.madrid.es/FWIAM_FTP/assets/js/cookie-manager.js></script>
-link(href="css/output.css", rel="stylesheet")
-link(rel="stylesheet", href="css/styles.css")
-link(href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Notable&display=swap", rel="stylesheet")
-link(href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap", rel="stylesheet")
-link(href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poiret+One&display=swap", rel="stylesheet")
-link(rel="preconnect", href="https://fonts.googleapis.com")
-link(rel="preconnect", href="https://fonts.gstatic.com", crossorigin)
-link(href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap", rel="stylesheet")
-<script src=https://ajax.googleapis.com/ajax/libs/prototype/1.7.3.0/prototype.js></script>
+
+  meta(charset="utf-8")
+  title Agencia Empleo
+  link(rel="stylesheet", href="https://cdn.jsdelivr.net/npm/uikit@3.19.2/dist/css/uikit.min.css")
+  link(rel="stylesheet", href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css")
+  script(src="https://aframe.io/releases/1.2.0/aframe.min.js")
+  link(href="css/output.css", rel="stylesheet")
+  link(rel="stylesheet", href="css/style.css")
+  link(href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&amp;family=Notable&amp;display=swap", rel="stylesheet")
+  link(href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&amp;display=swap", rel="stylesheet")
+  link(href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&amp;family=Poiret+One&amp;display=swap", rel="stylesheet")
+  link(rel="preconnect", href="https://fonts.googleapis.com")
+  link(rel="preconnect", href="https://fonts.gstatic.com", crossorigin)
+  link(href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&amp;display=swap", rel="stylesheet")
+  script(src="https://ajax.googleapis.com/ajax/libs/prototype/1.7.3.0/prototype.js")
+
