--- a/frontend/src/admin/styles.css
+++ b/frontend/src/admin/styles.css
@@ -49,7 +49,7 @@ img {
 }
 
 .login-form button {
-    width: 80%;
+    width: 200px;
     padding: 10px;
     background-color: #ffffff;
     border: none;
